[gd_scene load_steps=3 format=3 uid="uid://34e2mpa86tt"]

[ext_resource type="Script" path="res://characters/components/damage_area_with_owner.gd" id="1_nojyt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wtk1"]
size = Vector2(93, 90)

[node name="DamageAreaWithOwner" type="Area2D"]
collision_layer = 128
collision_mask = 128
script = ExtResource("1_nojyt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0wtk1")
debug_color = Color(0.856778, 0.363011, 0.114973, 0.42)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
